<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.longana.view.MainActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_a_game_of_longana"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="64sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/New"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Welcome"
        android:layout_alignBottom="@+id/Welcome"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="350dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="newGame"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/New"
        android:layout_alignEnd="@+id/New"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/New"
        android:layout_centerVertical="true"
        android:layout_marginBottom="250dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="savedGame"
        android:text="@string/save_game"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

</RelativeLayout>
