<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/round_info"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/tournament_score"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/round_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/round"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/computer"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/c_text"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/computer_hand"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="975dp"
            android:layout_height="100dp">

            <GridLayout
                android:id="@+id/c_hand"
                android:layout_width="975dp"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            </GridLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="125dp">

        <TextView
            android:id="@+id/left_letter"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/l"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <HorizontalScrollView
            android:layout_width="1100dp"
            android:layout_height="150dp"
            android:layout_weight="1">

            <GridLayout
                android:id="@+id/board_layout"
                android:layout_width="1100dp"
                android:layout_height="100dp"
                android:layout_gravity="left|center"
                android:orientation="horizontal"
                android:visibility="visible">

            </GridLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/right_letter"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/r"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/human"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/h_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/your_hand"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="30sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="1000dp"
            android:layout_height="100dp">

            <GridLayout
                android:id="@+id/h_hand"
                android:layout_width="1000dp"
                android:layout_height="100dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"></GridLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choices"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pass"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="125dp"
            android:background="@android:color/holo_blue_light"
            android:onClick="pass"
            android:paddingEnd="75dp"
            android:paddingStart="75dp"
            android:text="@string/pass_turn"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/help"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="125dp"
            android:layout_marginStart="200dp"
            android:background="@android:color/holo_blue_light"
            android:onClick="help"
            android:paddingEnd="125dp"
            android:paddingStart="125dp"
            android:text="@string/help"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>